--- a/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/AtamaIptalPage.xaml
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/AtamaIptalPage.xaml
@@ -1,15 +1,16 @@
-﻿<local:BasePage x:TypeArguments="local:BaseViewModel"  x:Class="UI.RaporlarPage"
+﻿<local:BasePage x:TypeArguments="local:BaseViewModel"  x:Class="UI.AtamaIptalPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UI"
       mc:Ignorable="d" 
-      d:DesignHeight="700" d:DesignWidth="800"
-      Title="Raporlar">
+      d:DesignHeight="500" d:DesignWidth="800"
+      Title="Atama İptal">
 
     <Border>
-        <Border CornerRadius="10"
+        <Border 
+                CornerRadius="10"
                 Margin="15 15 15 15"
                 Width="750"
                 Height="500">
@@ -23,7 +24,7 @@
 
                 <Border Grid.Row="0" Grid.Column="0" Margin="5 5 5 5" Background="#6E6E6E" CornerRadius="10">
                     <DockPanel Margin="15 5 15 5">
-                        <TextBlock Text="Raporlar" FontSize="35" Foreground="#e5e5e5" VerticalAlignment="Center"/>
+                        <TextBlock Text="Atama İptal" FontSize="35" Foreground="#e5e5e5" VerticalAlignment="Center"/>
                     </DockPanel>
                 </Border>
 
@@ -70,18 +71,20 @@
 
                             </DataGrid>
 
-                            <Border x:Name="UrunDokumAlBorder" 
+                            <Border Margin="0 5 0 0" 
                                     Background="#6E6E6E" 
-                                    Margin="0 10 0 0"
-                                    CornerRadius="3" 
-                                    MouseEnter="Border_MouseEnter" 
-                                    MouseLeave="Border_MouseLeave" 
-                                    MouseDown="Border_MouseDownAsync">
-                                <Label Foreground="#e5e5e5" 
-                                       HorizontalAlignment="Center" 
-                                       Content="Ürün Dökümü Al"
-                                       FontSize="14"
-                                       VerticalContentAlignment="Center"/>
+                                    CornerRadius="10" 
+                                    Height="30">
+
+                                <DockPanel>
+                                    <CheckBox x:Name="cbAtik"
+                                              Margin="5 0 0 0"
+                                              Content="Atık Ürünlere Ekle"
+                                              Foreground="#e5e5e5"
+                                              FontSize="15"
+                                              VerticalAlignment="Center"/>
+                                </DockPanel>
+
                             </Border>
 
                         </StackPanel>
@@ -113,7 +116,7 @@
                                        BorderThickness="0"
                                        CanUserResizeColumns="False" 
                                        CanUserResizeRows="False" 
-                                       Height="135">
+                                       Height="175">
 
                                 <DataGrid.Resources>
                                     <Style TargetType="{x:Type DataGridColumnHeader}">
@@ -131,20 +134,6 @@
 
                             </DataGrid>
 
-                            <Border x:Name="PersonelDokumAlBorder" 
-                                    Background="#6E6E6E" 
-                                    Margin="0 10 0 0"
-                                    CornerRadius="3" 
-                                    MouseEnter="Border_MouseEnter" 
-                                    MouseLeave="Border_MouseLeave" 
-                                    MouseDown="Border_MouseDownAsync">
-                                <Label Foreground="#e5e5e5" 
-                                       HorizontalAlignment="Center" 
-                                       Content="Personel Dökümü Al"
-                                       FontSize="14"
-                                       VerticalContentAlignment="Center"/>
-                            </Border>
-
                         </StackPanel>
 
                     </Grid>
@@ -161,6 +150,26 @@
                                    RenderOptions.BitmapScalingMode="HighQuality"
                                    Stretch="Fill" 
                                    Source="/Images/Logo/back.png"/>
+                        </StackPanel>
+                    </Border>
+
+                    <Border x:Name="AtamaIptalBorder" 
+                            Margin="5 5 5 5"
+                            Opacity="0.5"
+                            IsEnabled="False"
+                            Background="#6E6E6E" 
+                            Height="80" 
+                            Width="80" 
+                            CornerRadius="10" 
+                            MouseEnter="Border_MouseEnter" 
+                            MouseLeave="Border_MouseLeave" 
+                            MouseDown="Border_MouseDownAsync">
+                        <StackPanel VerticalAlignment="Center">
+                            <Image Width="64"
+                                   Height="64"
+                                   RenderOptions.BitmapScalingMode="HighQuality"
+                                   Stretch="Fill" 
+                                   Source="/Images/Logo/remove.png"/>
                         </StackPanel>
                     </Border>
 
