--- a/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/AtikSorgulamaPage.xaml
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/AtikSorgulamaPage.xaml
@@ -1,4 +1,4 @@
-﻿<local:BasePage x:TypeArguments="local:BaseViewModel"  x:Class="UI.StokSorgulamaPage"
+﻿<local:BasePage x:TypeArguments="local:BaseViewModel"  x:Class="UI.AtikSorgulamaPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:UI"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="800"
-      Title="StokSorgulamaPage">
+      Title="Atık Sorgulama">
 
     <Border>
         <Border CornerRadius="10"
@@ -23,7 +23,7 @@
 
                 <Border Grid.Row="0" Grid.Column="0" Margin="5 5 5 5" Background="#6E6E6E" CornerRadius="10">
                     <DockPanel Margin="15 5 15 5">
-                        <TextBlock Text="Stok Sorgulama" FontSize="35" Foreground="#e5e5e5" VerticalAlignment="Center"/>
+                        <TextBlock Text="Atık Sorgulama" FontSize="35" Foreground="#e5e5e5" VerticalAlignment="Center"/>
                     </DockPanel>
                 </Border>
 
@@ -40,7 +40,6 @@
                                 <TextBlock Text="Arama Kriteri: " Foreground="#e5e5e5" VerticalAlignment="Center"/>
                                 <ComboBox x:Name="KriterComboBox" Background="Transparent">
                                     <ComboBox.Items>
-                                        <ComboBoxItem Content="ID"/>
                                         <ComboBoxItem Content="Ad"/>
                                         <ComboBoxItem Content="Tarih"/>
                                     </ComboBox.Items>
@@ -68,10 +67,8 @@
                                 </Style>
                             </DataGrid.Resources>
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header=" ID" Binding="{Binding Id}" Width="80" IsReadOnly="True"/>
                                 <DataGridTextColumn Header=" Ad" Binding="{Binding Name}" Width="100" IsReadOnly="True"/>
                                 <DataGridTextColumn Header=" Tarih" Binding="{Binding Date}" Width="150" IsReadOnly="True"/>
-                                <DataGridTextColumn Header=" Zimmetlenen ID" Binding="{Binding AssignedById}" Width="150" IsReadOnly="True"/>
                             </DataGrid.Columns>
                         </DataGrid>
                     </StackPanel>
