--- a/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/DepartmanlarPage.xaml
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/DepartmanlarPage.xaml
@@ -1,4 +1,4 @@
-﻿<local:BasePage x:TypeArguments="local:BaseViewModel"  x:Class="UI.StokSorgulamaPage"
+﻿<local:BasePage x:TypeArguments="local:BaseViewModel"  x:Class="UI.DepartmanlarPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:UI"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="800"
-      Title="StokSorgulamaPage">
+      Title="Departmanlar">
 
     <Border>
         <Border CornerRadius="10"
@@ -23,42 +23,50 @@
 
                 <Border Grid.Row="0" Grid.Column="0" Margin="5 5 5 5" Background="#6E6E6E" CornerRadius="10">
                     <DockPanel Margin="15 5 15 5">
-                        <TextBlock Text="Stok Sorgulama" FontSize="35" Foreground="#e5e5e5" VerticalAlignment="Center"/>
+                        <TextBlock Text="Departmanlar" FontSize="35" Foreground="#e5e5e5" VerticalAlignment="Center"/>
                     </DockPanel>
                 </Border>
 
                 <StackPanel Grid.Row="1">
 
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="1" Orientation="Vertical" Margin="5 5 5 5">
 
-                        <Border Grid.Column="0" Margin="5 5 5 5" Background="#6E6E6E" CornerRadius="10" Height="40">
+                        <Border Margin="0 5 0 5" Background="#6E6E6E" CornerRadius="10" Height="40">
+
                             <DockPanel Margin="15 5 15 5">
-                                <TextBlock Text="Arama Kriteri: " Foreground="#e5e5e5" VerticalAlignment="Center"/>
-                                <ComboBox x:Name="KriterComboBox" Background="Transparent">
-                                    <ComboBox.Items>
-                                        <ComboBoxItem Content="ID"/>
-                                        <ComboBoxItem Content="Ad"/>
-                                        <ComboBoxItem Content="Tarih"/>
-                                    </ComboBox.Items>
-                                </ComboBox>
+                                <TextBlock Text="Departman: " 
+                                               Foreground="#e5e5e5" 
+                                               VerticalAlignment="Center"/>
+                                <ComboBox x:Name="DepartmanComboBox" 
+                                          Width="200"
+                                          HorizontalAlignment="Left"
+                                          SelectionChanged="DepartmanComboBox_SelectionChanged"/>
+                                <TextBlock Margin="15 0 0 0"
+                                           Text="Departman Yöneticisi: " 
+                                           Foreground="#e5e5e5" 
+                                           VerticalAlignment="Center"/>
+                                <TextBlock Margin="2 0 0 0"
+                                           x:Name="YoneticiText"
+                                           Foreground="#e5e5e5" 
+                                           VerticalAlignment="Center"/>
                             </DockPanel>
+
                         </Border>
 
-                        <Border Grid.Column="1" Margin="5 5 5 5" Background="#6E6E6E" CornerRadius="10" Height="40">
-                            <DockPanel Margin="15 5 15 5">
-                                <TextBlock Text="Filtre: " Foreground="#e5e5e5" VerticalAlignment="Center"/>
-                                <TextBox x:Name="FiltreText" Height="27" TextChanged="FiltreText_TextChanged" Background="#6E6E6E" MaxLength="20" Foreground="#e5e5e5" CaretBrush="#e5e5e5"/>
-                            </DockPanel>
-                        </Border>
+                        <TextBlock Text="Personeller" Margin="0 0 0 5" Foreground="#6E6E6E"/>
 
-                    </Grid>
+                        <DataGrid  x:Name="PersonellerDataGrid" 
+                                       IsReadOnly="True"
+                                       VerticalScrollBarVisibility="Auto" 
+                                       AutoGenerateColumns="False" 
+                                       SelectionMode="Single" 
+                                       CanUserAddRows="False" 
+                                       CanUserDeleteRows="False"
+                                       BorderThickness="0"
+                                       CanUserResizeColumns="False" 
+                                       CanUserResizeRows="False" 
+                                       Height="175">
 
-                    <StackPanel Grid.Column="0" Orientation="Vertical" Margin="5 5 5 5">
-                        <DataGrid x:Name="UrunlerDataGrid" BorderThickness="0" IsReadOnly="True" VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeColumns="False" CanUserResizeRows="False" Height="190">
                             <DataGrid.Resources>
                                 <Style TargetType="{x:Type DataGridColumnHeader}">
                                     <Setter Property="Background" Value="#6E6E6E"/>
@@ -67,26 +75,31 @@
                                     <Setter Property="BorderBrush" Value="#e5e5e5"/>
                                 </Style>
                             </DataGrid.Resources>
+
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header=" ID" Binding="{Binding Id}" Width="80" IsReadOnly="True"/>
-                                <DataGridTextColumn Header=" Ad" Binding="{Binding Name}" Width="100" IsReadOnly="True"/>
-                                <DataGridTextColumn Header=" Tarih" Binding="{Binding Date}" Width="150" IsReadOnly="True"/>
-                                <DataGridTextColumn Header=" Zimmetlenen ID" Binding="{Binding AssignedById}" Width="150" IsReadOnly="True"/>
+                                <DataGridTextColumn Header=" Ad" Binding="{Binding Name}" Width="90" IsReadOnly="True"/>
+                                <DataGridTextColumn Header=" Soyad" Binding="{Binding LastName}" Width="255" IsReadOnly="True"/>
                             </DataGrid.Columns>
+
                         </DataGrid>
+
                     </StackPanel>
+
                 </StackPanel>
 
+
                 <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Right">
+
                     <Border x:Name="GeriBorder" Margin="5 5 5 5" Background="#6E6E6E" Height="80" Width="80" CornerRadius="10" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" MouseDown="Border_MouseDownAsync">
                         <StackPanel VerticalAlignment="Center">
                             <Image Width="64"
                                    Height="64"
                                    RenderOptions.BitmapScalingMode="HighQuality"
-                                   Stretch="Fill"
+                                   Stretch="Fill" 
                                    Source="/Images/Logo/back.png"/>
                         </StackPanel>
                     </Border>
+
                 </StackPanel>
 
             </Grid>
