--- a/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/AtikSorgulamaPage.xaml
+++ b/JoTakip - Bilgisayar Stok Takip Sistemi/UI/Pages/AtikSorgulamaPage.xaml
@@ -40,6 +40,7 @@
                                 <TextBlock Text="Arama Kriteri: " Foreground="#e5e5e5" VerticalAlignment="Center"/>
                                 <ComboBox x:Name="KriterComboBox" Background="Transparent">
                                     <ComboBox.Items>
+                                        <ComboBoxItem Content="ID"/>
                                         <ComboBoxItem Content="Ad"/>
                                         <ComboBoxItem Content="Tarih"/>
                                     </ComboBox.Items>
@@ -67,6 +68,7 @@
                                 </Style>
                             </DataGrid.Resources>
                             <DataGrid.Columns>
+                                <DataGridTextColumn Header=" ID" Binding="{Binding Id}" Width="100" IsReadOnly="True"/>
                                 <DataGridTextColumn Header=" Ad" Binding="{Binding Name}" Width="100" IsReadOnly="True"/>
                                 <DataGridTextColumn Header=" Tarih" Binding="{Binding Date}" Width="150" IsReadOnly="True"/>
                             </DataGrid.Columns>
